cmake_minimum_required(VERSION 3.11)
project(Acts_side VERSION 0.0 LANGUAGES CUDA CXX)
find_library(CUDART_LIBRARY cudart ${CMAKE_CUDA_IMPLICIT_LINK_DIRECTORIES})
include_directories(${CMAKE_CUDA_TOOLKIT_INCLUDE_DIRECTORIES})
include_directories("/home/bomki/Projects/ACTS/Tests/UnitTests/Core/Seeding")
find_package (Acts COMPONENTS Core)
find_package (ROOT COMPONENTS RIO)
find_package (Boost REQUIRED)
include(${ROOT_USE_FILE})
add_executable(SeedStatistics ./app/SeedStatistics)
add_executable(SeedModuleValidate ./app/SeedModuleValidate)
target_link_libraries(SeedStatistics PRIVATE ${CUDART_LIBRARY} ${ROOT_LIBRARIES} ActsCore Boost::boost)
target_link_libraries(SeedModuleValidate PRIVATE ${CUDART_LIBRARY} ${ROOT_LIBRARIES} ActsCore Boost::boost)
